SFUSA/force-app/main/default/objects/GBS_Flow_Secondary_Category_Setting__mdt/fields/GBS_Flow_Primary_Category_Setting__c.field-meta.xml
<CustomField>
        <fullName>GBS_Flow_Primary_Category_Setting__c</fullName>
        <label>GBS Flow Primary Category Setting</label>
        <referenceTo>GBS_Flow_Primary_Category_Setting__mdt</referenceTo>
        <relationshipLabel>GBS Flow Secondary Category Settings</relationshipLabel>
        <relationshipName>GBS_Flow_Secondary_Category_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </CustomField>