SFUSA/force-app/main/default/objects/GBS_Flow_Secondary_Category_Setting__mdt/fields/Order__c.field-meta.xml
<CustomField>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>